--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta charset="UTF-8">
     <title>Document</title>
     <script src="http://code.jquery.com/jquery-2.1.4.min.js"></script><!-- jQuery -->
+    <script src="https://fb.me/react-0.13.3.js"></script><!-- React -->
+    <script src="https://fb.me/JSXTransformer-0.13.3.js"></script><!-- JSX Transformer React -->
     <link href='http://fonts.googleapis.com/css?family=Hind:600,700,400,500' rel='stylesheet' type='text/css'><!-- Google Fonts -->
     <link href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.4/simplex/bootstrap.min.css" rel="stylesheet">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
@@ -52,7 +54,11 @@
             </div>
         </div>
     </div>
+    <div id="main">
+        <!-- React acts here -->
+    </div>
     <script src="js/canvas.js"></script>
+    <script type="text/jsx" src="js/main.js"></script>
 </body>
 
 </html>
