--- a/index.html
+++ b/index.html
@@ -71,14 +71,16 @@
             <div class="col-md-6 transform-col" id="pbar-info">
                 <div class="panel panel-default">
                     <div class="panel-body">
-                        <canvas id="canvas" width="700" height="700"></canvas>
-                            <h1 id="num-skins">7/25</h1>
-                            <p id="skins-word">Skins</p>
-                            <button type="button" id="add-skin">
-                                <-- Add a skin </button>
-                                    <button type="button" id="add-deposit">
-                                        Add a deposit -->
-                                    </button>
+                        <canvas id="canvas-skins" width="700" height="700"></canvas>
+                        <canvas id="canvas-money" width="700" height="700"></canvas>
+                        <div id="canvas-text">
+                            <h1 id="num-skins">7 skins</h1>
+                        </div>
+                        <button type="button" id="add-skin">
+                            <-- Add a skin </button>
+                                <button type="button" id="add-deposit">
+                                    Add a deposit -->
+                                </button>
                     </div>
                 </div>
             </div>
